<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layoutPadding"
    android:weightSum="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/CarLoanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/Title"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/editTextCarPrice"
        android:layout_width="401dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/car_price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextDownPayment"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/down_payment"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextLoanPeriod"
        android:layout_width="403dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/loan_period"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextInterestRate"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/interest_rate"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:onClick="resetInput"
            android:text="@string/reset" />
    </LinearLayout>
</LinearLayout>