<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textViewCarLoan"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginTop="200dp"
        android:freezesText="true"
        android:text="@string/loan"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textViewInterest"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="@string/interest"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewCarLoan"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewMonthlyPayment"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_weight="1"
        android:text="@string/monthly_repayment"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewInterest"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Back"
        android:onClick="closeActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>